[package]
name = "litiaina-rse"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures-util = "0.3.31"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
anyhow = "1.0.100"
indicatif = "0.18.0"

[[bin]]
name = "litiaina-rse"
path = "src/main.rs"
